<resources>
    <string name="app_name">Kids Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start">Lets GO!!</string>
    <string name="enter"> START</string>
    <string name="Finish"> FINISH</string>
    <string name="GoToNext"> GO TO NEXT</string>
    <string name="name"> Please enter your name</string>
    <string name="welcome">WELCOME </string>
    <string name="title">KIDS QUIZ</string>
    <string name="select_type">SELECT TYPE</string>
    <string name="select_category">SELECT CATEGORY</string>
    <string name="enter_details">ENTER YOUR DETAILS</string>
    <string name="enter_name">Enter your name..</string>
        <string name="email">Email  </string>
    <string name="add_btn">ADD  </string>
    <string name="hello">Hello Player</string>

    <string name="add_player">Add Player</string>
    <string name="delete_player">Delete Player</string>
    <string name="reset_score">Reset Score</string>
    <string name="email_us">Email Us</string>
    <string name="share_app">Share App</string>
    <string name="delete_single_player">Delete Player</string>
    <string name="title_delete_player">Are you sure want to delete player?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update_single_player">Reset Score</string>
    <string name="title_update_player">Are you sure want to reset score?</string>

    <string name="quiz_name">Quiz Name:</string>
    <string name="your_score">Your Score</string>
    <string name="try_again">Try Again</string>
    <string name="more_questions">More Questions</string>
    <string name="next_quiz">Next Quiz</string>

    <string name="score">score</string>
    <string name="home">Home</string>
    <string name="single_player">Single Player</string>
    <string name="settings">Settings</string>
    <string name="multi_player">Multi Player</string>
    <string name="quiz">quiz</string>
    <string name="_10">10</string>
    <string name="birds_and_animals">Birds and Animals</string>
    <string name="_2">2</string>
    <string name="quizVal">quiz</string>
    <string name="numVal">10</string>
    <string name="quizTv">quiz</string>
    <string name="zeroVal">10</string>
    <string name="_1_10">1/10</string>
    <string name="_0">0</string>
    <string name="tvZero">0</string>
    <string name="whis_is_your_name">Whis is your name?</string>
    <string name="answer1">answer1</string>
    <string name="answer2">answer2</string>
    <string name="answer3">answer3</string>
    <string name="answer4">answer4</string>
    <string name="submit">SUBMIT</string>
    <string name="zeroTv">10</string>
    <string name="star">star</string>
    <string name="_9_10">9/10</string>
    <string name="image">image</string>
    <string name="zeroValTv">0</string>
    <string name="starTv">star</string>
    <string name="imageTv">image</string>
    <string name="starimage">starImage</string>
    <string name="tvZeroVal">0</string>


</resources>