<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <TextView
        android:id="@+id/quiz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_name"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/quiz_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_name"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/quiz_title"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zeroTv"
        android:textSize="40sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quiz_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".4"
        />

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/star"
        android:contentDescription="@string/star"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/score"
        app:layout_constraintTop_toBottomOf="@id/quiz_title"/>

    <TextView
        android:id="@+id/your_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:textSize="25sp"
        android:layout_marginTop="23dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".3"
        />

    <TextView
        android:id="@+id/score_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9_10"
        android:textSize="25sp"
        android:layout_marginTop="23dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/your_score_title"
        app:layout_constraintTop_toBottomOf="@id/score"

        />

    <Button
        android:id="@+id/try_again_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        android:textSize="20sp"
        app:layout_constraintVertical_bias=".8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <Button
        android:id="@+id/more_question_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_questions"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        app:layout_constraintVertical_bias=".8"
        app:layout_constraintStart_toEndOf="@id/try_again_btn"
        app:layout_constraintTop_toTopOf="@id/try_again_btn"
        />

    <Button
        android:id="@+id/next_quiz_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_quiz"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/try_again_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>