<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/gradient_question_back"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.QuestionsFragment">

  <TextView
    android:id="@+id/tv_question_count"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
    android:text="@string/_1_10"
    android:textStyle="bold"
    android:textColor="@color/end_btn"
      android:background="@drawable/gradient_quiz_type"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <TextView
      android:id="@+id/tv_question_right"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/_0"
      android:textStyle="bold"
      android:textColor="@color/end_btn"
      android:background="@drawable/gradient_quiz_type"
     android:layout_marginEnd="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/tv_question_count"/>

  <TextView
      android:id="@+id/tv_question_wrong"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/tvZero"
      android:textStyle="bold"
      android:textColor="@color/end_btn"
      android:background="@drawable/gradient_quiz_type"
      android:layout_marginEnd="5dp"
      android:layout_marginStart="5dp"
      app:layout_constraintStart_toEndOf="@id/tv_question_right"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/tv_question_count"/>

  <TextView
      android:id="@+id/tv_question"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/whis_is_your_name"
      android:textSize="20sp"
      android:textColor="@color/end_btn"
      android:padding="15dp"
      android:layout_marginTop="10dp"
      android:gravity="center"
      android:background="@drawable/gradient_quiz_type"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_question_count"/>

    <ImageView
        android:id="@+id/iv_question"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:contentDescription="@string/name"
        app:layout_constraintWidth_percent=".9"
        android:layout_marginTop="15dp"
        android:src="@drawable/clear_sky"
        android:scaleType="fitXY"
        android:background="@drawable/gradient_quiz_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question"/>

  <TextView
    android:id="@+id/btn_option_one"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintWidth_percent=".7"
      android:text="@string/answer1"
      android:padding="15dp"
      android:textSize="20sp"
      android:gravity="center"
      android:textColor="@color/end_btn"
      android:layout_marginTop="20dp"
      android:background="@drawable/gradient_quiz_type"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/iv_question"/>

  <TextView
      android:id="@+id/btn_option_two"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintWidth_percent=".7"
      android:text="@string/answer2"
      android:textColor="@color/end_btn"
      android:gravity="center"
      android:textSize="20sp"
      android:padding="15dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/gradient_quiz_type"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/btn_option_one"/>

  <TextView
      android:id="@+id/btn_option_three"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintWidth_percent=".7"
      android:text="@string/answer3"
      android:gravity="center"
      android:textSize="20sp"
      android:padding="15dp"
      android:layout_marginTop="20dp"
      android:textColor="@color/end_btn"
      android:background="@drawable/gradient_quiz_type"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/btn_option_two"/>

  <TextView
      android:id="@+id/btn_option_four"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintWidth_percent=".7"
      android:text="@string/answer4"
      android:gravity="center"
      android:textSize="20sp"
      android:padding="15dp"
      android:layout_marginTop="20dp"
      android:textColor="@color/end_btn"
      android:background="@drawable/gradient_quiz_type"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/btn_option_three"/>

  <TextView
      android:id="@+id/btn_next"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/submit"
      android:layout_marginTop="15dp"
      android:gravity="center"
      android:textSize="20sp"
      android:textColor="@color/end_btn"
      android:padding="15dp"
      android:background="@drawable/gradient_btn_bgnd"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/btn_option_four"
      app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>