<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.StartFragment">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/end_btn"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="40sp"
        android:textColor="@color/end_btn"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome"/>


    <ImageView
        android:id="@+id/image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/kids"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imageTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        />

    <ImageView
        android:id="@+id/star"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/star"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/starimage"
        app:layout_constraintHorizontal_bias=".4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        />

    <TextView
        android:id="@+id/star_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvZeroVal"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/end_btn"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".2"
        app:layout_constraintTop_toBottomOf="@id/image"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
       android:textStyle="italic"
        android:textSize="25sp"
        android:textColor="@color/end_btn"
        android:background="@drawable/gradient_btn_bgnd"
        android:layout_marginTop="30dp"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/star"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>