<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_vertical"


    >

    <TextView
        android:id="@+id/add_player"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/add_player"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/gradient_btn_bgnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/delete_player"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:text="@string/delete_player"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/gradient_btn_bgnd"
        app:layout_constraintStart_toStartOf="@id/add_player"
        app:layout_constraintEnd_toEndOf="@id/add_player"
        app:layout_constraintTop_toBottomOf="@id/add_player"
        />

    <TextView
        android:id="@+id/reset_score"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:text="@string/reset_score"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/gradient_btn_bgnd"
        app:layout_constraintStart_toStartOf="@id/delete_player"
        app:layout_constraintEnd_toEndOf="@id/delete_player"
        app:layout_constraintTop_toBottomOf="@id/delete_player"
        />

    <TextView
        android:id="@+id/email_us"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:text="@string/email_us"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/gradient_btn_bgnd"
        app:layout_constraintStart_toStartOf="@id/reset_score"
        app:layout_constraintEnd_toEndOf="@id/reset_score"
        app:layout_constraintTop_toBottomOf="@id/reset_score"
        />

    <TextView
        android:id="@+id/share_app"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="20dp"
        android:text="@string/share_app"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/gradient_btn_bgnd"
        app:layout_constraintStart_toStartOf="@id/email_us"
        app:layout_constraintEnd_toEndOf="@id/email_us"
        app:layout_constraintTop_toBottomOf="@id/email_us"
        />
</androidx.constraintlayout.widget.ConstraintLayout>