<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.StartFragment">

    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_details"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/end_btn"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent=".9"
        android:background="@drawable/selected_back"
        android:inputType="text"
        android:textColor="@color/end_btn"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_name"
        android:padding="15dp"
        android:textColorHint="@color/end_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent=".9"
        android:background="@drawable/selected_back"
        android:inputType="textEmailAddress"
        android:textColor="@color/end_btn"
        android:layout_marginTop="30dp"
        android:hint="@string/email"
        android:padding="15dp"
        android:textColorHint="@color/end_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"/>

<Button
    android:id="@+id/add_btn"
    android:layout_width="0dp"
    android:layout_height="50dp"
    app:layout_constraintWidth_percent=".7"
    android:text="@string/add_btn"
    android:textColor="@color/end_btn"
    android:layout_marginTop="30dp"
    android:background="@drawable/gradient_btn_bgnd"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/et_email"/>
    

</androidx.constraintlayout.widget.ConstraintLayout>