<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="@drawable/gradient_quiz_type"
    android:layout_margin="5dp"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/quiz_type_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizTv"
        android:textColor="@color/end_btn"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/image_star"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/name"
        android:src="@drawable/star"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/star_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zeroVal"
        android:textColor="@color/end_btn"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_star"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>