<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/gradient_quiz_type"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/quiz_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/name"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_quiz_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textColor="@color/end_btn"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/quiz_image"

        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/image_star"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/name"
        android:src="@drawable/star"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/star_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:textColor="@color/end_btn"
        android:gravity="center_horizontal"
        android:textSize="23sp"
        android:layout_marginTop="26dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_star"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>