<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/cl_player"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="10dp"
    android:background="@drawable/gradient_quiz_type"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true">

    <ImageView
        android:id="@+id/player_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizVal"
        android:textColor="@color/end_btn"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/player_image"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/image_star"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/star"
        android:contentDescription="@string/name"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/star_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numVal"
        android:textColor="@color/end_btn"
        android:gravity="center_horizontal"
        android:textSize="23sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_star"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>